fix: spacing in responsive design style

--- a/src/assets/styles/_about.scss
+++ b/src/assets/styles/_about.scss
@@ -9,6 +9,10 @@ main > article.about > .content p {
     margin-top: 0;
   }
 
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   b {
     padding: 0.20em;
     color: $gray-05;
